k8s/whispr/prod/notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: whispr-prod
spec:
  type: NodePort
  selector:
    app: notification-service
  ports:
    - name: http
      port: 4011
      targetPort: 4011
      nodePort: 30021
    - name: grpc
      port: 40011
      targetPort: 40011
